--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "bootstrap": "^4.6.0",
+    "dotenv": "^16.0.1",
     "graphql": "^16.5.0",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
@@ -22,8 +24,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.1",
     "web-vitals": "^2.1.4",
-    "yelp-fusion": "^3.0.0",
-    "bootstrap": "^4.6.0"
+    "yelp-fusion": "^3.0.0"
   },
   "keywords": [],
   "author": "",
